@@ -1,5 +1,11 @@
 <h1>News</h1>
 
+<h2>Version 0.8.8</h2>
+<p>Use PortMidi default device. This allows to configure the MTC MIDI port with pmdefaults
+(<a href="https://github.com/x42/xjadeo/issues/26#issuecomment-394870466">walkthrough example</a>).
+Allow to setting a custom OSD font on windows using a file-path with Umlauts.
+</p>
+
 <h2>Version 0.8.6, 0.8.7</h2>
 <p>Xjadeo now explicitly request single-screen fullscreen on OSX.
 Linux binaries no longer require JACK to be installed.
