@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH XJADEO "1" "November 2016" "xjadeo version 0.8.7" "User Commands"
+.TH XJADEO "1" "June 2018" "xjadeo version 0.8.8" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -356,9 +356,9 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.7
+scm\-v0.8.8
 .IP
-compiled with: AVFORMAT=0x392964 AVCODEC=0x393065 AVUTIL:0x371c64
+compiled with: AVFORMAT=0x393865 AVCODEC=0x394065 AVUTIL:0x372265
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
