@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH XJREMOTE "1" "November 2016" "xjremote version 0.8.7" "User Commands"
+.TH XJREMOTE "1" "June 2018" "xjremote version 0.8.8" "User Commands"
 .SH NAME
 xjremote \- X Jack Video Monitor Remote Control
 .SH SYNOPSIS
@@ -54,7 +54,7 @@ Report bugs to Robin Gareus <robin@gareus.org>
 Website: <https://github.com/x42/xjadeo>
 .TP
 built from:
-scm\-v0.8.7
+scm\-v0.8.8
 .TP
 configuration:
 [ POSIX\-MQueue ]
